--- a/titelseite.tex
+++ b/titelseite.tex
@@ -7,7 +7,7 @@
 \typearea[13.125mm]{15}
 
 \newsavebox{\Prof}
-\savebox{\Prof}{\usesf Prof.~Dr.~Hartmut~Schmeck}
+\savebox{\Prof}{\usesf Prof.~}
 \newsavebox{\Betreuer}
 \savebox{\Betreuer}{\usesf *Betreuer*}
 \newsavebox{\Diplomant}
@@ -60,7 +60,7 @@ des Karlsruher Instituts für Technologie
 %
 Referent: \usebox{\Prof}\\
 Betreuer: \usebox{\Betreuer}\\
-%
+%a
 \vfill
 %
 \begin{tabular}{lp{5cm}l}
